@@ -65,7 +65,7 @@ The compile() function can convert these string cursors into cursor byte data.
 compile cursor strings into cursor data</td></tr>
 
 
-<tr><td><a href=#read_xbm>read_xbm</a></td><td> -
+<tr><td><a href=#load_xbm>load_xbm</a></td><td> -
 reads a pair of XBM files into set_cursor arguments</td></tr>
 
 
@@ -89,9 +89,9 @@ considered clear.
 <br>&nbsp;<br>
 </ul><br>&nbsp;<br>
 
-<a name=read_xbm><font size=+2><b>read_xbm
+<a name=load_xbm><font size=+2><b>load_xbm
 </b></font><br><font size=+1><tt>
-pygame.cursors.read_xbm(cursorfile, maskfile) -> cursor_args
+pygame.cursors.load_xbm(cursorfile, maskfile) -> cursor_args
 </tt></font><ul>
 Arguments can either be strings or filelike objects
 with the readlines method. Not largely tested, but
